k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-gateway
  namespace: messaging-gateway
spec:
  selector:
    app: messaging-gateway
  ports:
  - port: 8086
    targetPort: 8086
